--- a/vite-project/src/RemovePhotoButton.css
+++ b/vite-project/src/RemovePhotoButton.css
@@ -8,3 +8,7 @@
   opacity: 0.8;
   border: none;
 }
+
+#RemovePhotoButton:hover{
+  cursor: pointer;
+}
